# areaim

./: README
osdl-aim-7/: Makefile.am  _FIXME  _README.hp  configure.in  setup
osdl-aim-7/Support_scripts/: Build_it  Build_it_post_install  bootstrap  do_clean_file_systems  do_make_devices  do_make_file_systems  do_mkdir_file_systems  do_modify_reaim_config  do_mount_file_systems  do_umount_file_systems  kill_reaim  master_disk_list  parse_config.pm  parse_config.pm.orig  run_reaim
osdl-aim-7/_NOTICES/: CREDITS  ChangeLog  INSTALL  INSTALL.reaim  NEWS  README  README.aim7  TODO  _README_first.hp
osdl-aim-7/data/: fakeh.tgz  reaim.config  workfile.aim9  workfile.all_utime  workfile.alltests  workfile.compute  workfile.custom  workfile.dbase  workfile.disk  workfile.five_sec  workfile.fserver  workfile.high_systime  workfile.long  workfile.new_dbase  workfile.new_fserver  workfile.shared  workfile.short
osdl-aim-7/include/: tlibio.h  write_log.h
osdl-aim-7/lib/: Makefile.am  configure.in  dataascii.c  str_to_bytes.c  tlibio.c  tst_sig.c
osdl-aim-7/lib/ORIG/: file_lock.c  open_flags.c  random_range.c  str_to_bytes.c  tst_res.c  tst_sig.c
osdl-aim-7/scripts/: aim9-compare.pl  aim_2.sh  example_load.sh  instruct.sh  run.10.users.sh  runall.sh  setup.sh  true  xover_load.sh
osdl-aim-7/scripts/ORIG/: instruct.sh
osdl-aim-7/sql/: README  create_db.sql  create_tables.sql
osdl-aim-7/sql/scripts/: parse_details.pl  parse_request_details.pl  parse_run_data.pl  reaim_db.conf  reaim_db_grapher.pl
osdl-aim-7/src/: Makefile.am  configure.in  creat_clo.c  disk1.c  disk_funcs.c  disk_src.c  div.c  driver.c  drv_funcs.c  int_fcns.c  mul.c  num_fcns.c  pipe_test.c  ram.c  rand.c  suite.h  times_ms.c  workvile.very_long
osdl-aim-7/src/ORIG/: add.c  aimlist.h  creat_clo.c  disk1.c  disk_funcs.c  driver.c  drv_funcs.c  files.h  fun.c  funcal.c  funcal.h  num_fcns.c  pipe_test.c  suite.h  test1.c
results/: aim_graph_average_template.xlsm  aim_graph_template.xlsm
