dnl Input file for autoconf
AC_INIT(src/driver.c)
AC_CONFIG_AUX_DIR(config)
AM_CONFIG_HEADER(config.h:config-h.in)
AM_INIT_AUTOMAKE(re-aim, 0.1.0)

dnl Checks for programs.
AC_PROG_AWK
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_LN_S
AM_PROG_CC_STDC
AM_PROG_LIBTOOL


dnl Checks for libraries.

dnl Checks for header files.
AC_HEADER_DIRENT
AC_HEADER_STDC
AC_CHECK_HEADERS(arpa/inet.h fcntl.h limits.h malloc.h memory.h netdb.h netinet/in.h stdlib.h string.h sys/file.h sys/param.h sys/socket.h sys/time.h termios.h unistd.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_UID_T
AC_TYPE_OFF_T
AC_TYPE_PID_T
AC_TYPE_SIZE_T
AC_HEADER_TIME

dnl Checks for library functions.
AC_FUNC_GETPGRP
AC_FUNC_MEMCMP
AC_FUNC_MMAP
AC_TYPE_SIGNAL
AC_FUNC_STRCOLL
AC_FUNC_VPRINTF
AC_CHECK_FUNCS(alarm bzero floor getcwd gethostbyname gethostname getpagesize gettimeofday memchr memmove memset mkdir modf munmap pow rmdir socket sqrt strchr strcspn strdup strerror strpbrk strrchr strspn strstr strtol uname)




CFLAGS="-W -Wall -lm -ffloat-store -g -O -D_GNU_SOURCE -DSHARED_OFILE"
# AM_PROG_MAKE_SET

# AC_CONFIG_SUBDIRS(lib)
# SUBDIRS="src lib"
# AC_SUBST = (SUBDIRS)

AC_OUTPUT(Makefile lib/Makefile src/Makefile)



